fix: page layout broken on smaller viewport

--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
     margin: 0 0 5px 0;
 }
 
+.flex--wrap {
+    flex-wrap: wrap;
+}
+
 .w50p {
     width: 50%;
 }
@@ -78,7 +82,7 @@ body {
 }
 
 .user-ip {
-    font-size: 1rem;
+    font-size: clamp(10px, 1rem, 20px);
     margin: 1px 0 0 0 0;
     text-align: center;
     width: 100%;
@@ -211,7 +215,7 @@ input[type="checkbox"] {
 }
 
 .ip-info li {
-    font-size: 1.2rem;
+    font-size: clamp(12px, 1.2rem, 24px);
     line-height: 21px;
     color: #dedede;
     word-break: break-all;
@@ -259,3 +263,9 @@ input[type="checkbox"] {
     transition: opacity 0.3s;
 }
 /* Popup - END*/
+
+@media only screen and (max-width: 320px) {
+    html { 
+       font-size: 7px; 
+    }
+}
